force-app/main/default/objects/Case/fields/Case_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_Developer_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type Developer Name</label>
    <type>Text</type>
</CustomField>