force-app/main/default/objects/Case/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <label>Case Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>In-store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>