force-app/main/default/objects/Case/fields/Category_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Category_Prefix__c</fullName>
    <description>Category prefixes for the naming conventions</description>
    <label>Category Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>