force-app/main/default/objects/Case/fields/Category_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Category_Sequence__c</fullName>
    <label>Category Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>