force-app/main/default/objects/Case/fields/Chat_Status__c.field-meta.xml
<CustomField>
    <fullName>Chat_Status__c</fullName>
    <label>Chat Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Message sent to Customer</fullName>
            </value>
            <value>
                <fullName>Customer Replied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>