force-app/main/default/objects/Case/fields/Competitor_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Mentioned__c</fullName>
    <description>Faizan</description>
    <label>Competitor Mentioned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>