force-app/main/default/objects/Case/fields/Compliance_Officer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Officer_Notes__c</fullName>
    <label>Compliance Officer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>