force-app/main/default/objects/Case/fields/Contact_Method_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Preference__c</fullName>
    <description>How the customer prefers to be contacted about this Case, captured from the Customise wizard&apos;s &quot;Details&quot; step.</description>
    <label>Contact Method Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>