force-app/main/default/objects/Case/fields/Custom_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Case_Number__c</fullName>
    <formula>Category_Prefix__c &amp; TEXT(Category_Sequence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Case Number</label>
    <type>Text</type>
</CustomField>