force-app/main/default/objects/Case/fields/Estimated_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Order_Value__c</fullName>
    <description>Faizan</description>
    <label>Estimated Order Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>