force-app/main/default/objects/Case/fields/KYC_Approval_Initiated__c.field-meta.xml
<CustomField>
    <fullName>KYC_Approval_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true the first time this Case is submitted for KYC Finance Approval (Case_Finance_Approval). Used as the approval process&apos;s entry-criteria guard and by the KYC_Submit_For_Approval flow to block a second submission on the same Case.</description>
    <label>KYC Approval Process Initiated</label>
    <type>Checkbox</type>
</CustomField>