force-app/main/default/objects/Case/fields/KYC_Order__c.field-meta.xml
<CustomField>
    <fullName>KYC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC_Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>