force-app/main/default/objects/Case/fields/KYC_Rejection_Log__c.field-meta.xml
<CustomField>
    <fullName>KYC_Rejection_Log__c</fullName>
    <description>Timestamped audit trail of the cancel/void/refund steps attempted for this Case&apos;s rejection — SFCC responses, payment state read, gateway result, and any errors.</description>
    <label>KYC Rejection Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>