force-app/main/default/objects/Case/fields/KYC_Rejection_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Rejection_Status__c</fullName>
    <description>Tracks the cancel/void/refund handling triggered by this Case&apos;s compliance rejection. Also the idempotency guard — processing only proceeds while this is blank or &apos;Failed&apos;.</description>
    <label>KYC Rejection Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting Gateway</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>