force-app/main/default/objects/Case/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <description>Faizan</description>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>