force-app/main/default/objects/Case/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <description>Faizan</description>
    <label>Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software License</fullName>
            </value>
            <value>
                <fullName>Premium Support</fullName>
            </value>
            <value>
                <fullName>Cloud Storage</fullName>
            </value>
            <value>
                <fullName>Hardware Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>