force-app/main/default/objects/Case/fields/Query_Category__c.field-meta.xml
<CustomField>
    <fullName>Query_Category__c</fullName>
    <description>Faizan</description>
    <label>Query Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Info</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>