force-app/main/default/objects/Case/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SFCC/MRT Order this Case is about. Independent of any other Case–Order link on this object (e.g. KYC) — populate it on any Case so the &quot;Product is Ready&quot; action knows which Order to request the N-Genius balance payment link (Link 2) for.</description>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases (Related Order)</relationshipLabel>
    <relationshipName>Related_Order_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>