force-app/main/default/objects/Case/fields/Risk_Fraud_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Fraud_Score__c</fullName>
    <description>Faizan</description>
    <label>Risk Fraud Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>