force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Faizan</description>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Query_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>Delivery Delay</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>