force-app/main/default/objects/Case/recordTypes/Compliance.recordType-meta.xml
<RecordType>
    <fullName>Compliance</fullName>
    <active>true</active>
    <businessProcess>Compliance</businessProcess>
    <label>Compliance</label>
</RecordType>