force-app/main/default/objects/Case/recordTypes/General_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>General_Enquiry</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>General Enquiry</label>
</RecordType>