force-app/main/default/objects/Case/recordTypes/KYC_Required.recordType-meta.xml
<RecordType>
    <fullName>KYC_Required</fullName>
    <active>false</active>
    <businessProcess>KYC Review Process</businessProcess>
    <label>KYC Required</label>
</RecordType>