force-app/main/default/objects/Case/recordTypes/Sales_Follow_up.recordType-meta.xml
<RecordType>
    <fullName>Sales_Follow_up</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Sales Follow-up</label>
</RecordType>