force-app/main/default/objects/Case/listViews/Compliance_Cases.listView-meta.xml
<ListView>
    <fullName>Compliance_Cases</fullName>
    <columns>Custom_Case_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Custom_Case_Number__c</field>
        <operation>contains</operation>
        <value>COMP_</value>
    </filters>
    <label>Compliance Cases</label>
</ListView>