force-app/main/default/objects/Case/listViews/General_Enquiry_Cases.listView-meta.xml
<ListView>
    <fullName>General_Enquiry_Cases</fullName>
    <columns>Custom_Case_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Custom_Case_Number__c</field>
        <operation>contains</operation>
        <value>GE_</value>
    </filters>
    <label>General Enquiry Cases</label>
</ListView>