force-app/main/default/objects/Case/listViews/KYC_Compliance_Review_Case.listView-meta.xml
<ListView>
    <fullName>KYC_Compliance_Review_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>KYC Compliance Review</label>
    <queue>KYC_Compliance_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>